# build-service

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  requirements.md
.build-service/: config.toml
config/: config.toml
docs/: design-workspace-reuse.md
docs/design/: client-config-disable-build-service.md  workspace-branch-macro.md
docs/implementation/build-cli-log-capture/: design.md  phase-task-plan.md
scripts/: build-wrapper.sh  bump-version.mjs  make-wrapper.sh  release.mjs
src/: artifacts.rs  build.rs  daemon.rs  http.rs  lib.rs  protocol.rs  user.rs  validation.rs  workspace.rs
src/config/: mod.rs
src/logging/: mod.rs
systemd/: build-service.service
tests/: build_cli_connection.rs  build_cli_log_capture.rs
