[package]
name = "build-service"
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["kevin <kevin@example.com>"]
description = "Host-side build service that runs builds on behalf of container clients."

[[bin]]
name = "build-service"
path = "src/bin/build-service.rs"

[[bin]]
name = "build-cli"
path = "src/bin/build-cli.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal", "process"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
